// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Utils generateReportContent Should render template with scores and title 1`] = `
"# OpenSSF Scorecard Report

## Summary

| Repository | Commit | Score | Date | Difference | Report Link | StepSecurity Link |
| -- | -- | -- | -- | -- | -- | -- |
| [fake-org/fake-repo](https://github.com/fake-org/fake-repo) | [846b3dd](https://github.com/fake-org/fake-repo/commit/846b3ddb5f75d95235e94d9eb52e920f4a067338) | 10 | 2023-02-20 | 5 | [Full Report](https://deps.dev/project/github/fake-org%2Ffake-repo) | [Fix it](http://app.stepsecurity.io/securerepo?repo=fake-org/fake-repo) |

_Report generated by [UlisesGascon/openssf-scorecard-monitor](https://github.com/UlisesGascon/openssf-scorecard-monitor)._"
`;

exports[`Utils generateReportContent Should render template with scores only 1`] = `
"
| Repository | Commit | Score | Date | Difference | Report Link | StepSecurity Link |
| -- | -- | -- | -- | -- | -- | -- |
| [fake-org/fake-repo](https://github.com/fake-org/fake-repo) | [846b3dd](https://github.com/fake-org/fake-repo/commit/846b3ddb5f75d95235e94d9eb52e920f4a067338) | 10 | 2023-02-20 | 5 | [Full Report](https://deps.dev/project/github/fake-org%2Ffake-repo) | [Fix it](http://app.stepsecurity.io/securerepo?repo=fake-org/fake-repo) |

_Report generated by [UlisesGascon/openssf-scorecard-monitor](https://github.com/UlisesGascon/openssf-scorecard-monitor)._"
`;

exports[`Utils generateReportContent Should render template with title only 1`] = `
"# OpenSSF Scorecard Report

## Summary


_Report generated by [UlisesGascon/openssf-scorecard-monitor](https://github.com/UlisesGascon/openssf-scorecard-monitor)._"
`;
